# MIC-Reader

./: CLAUDE.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  native_opencv.cpp
docs/: planning.md
docs/images/: README.md
files/: WhatsApp Image 2026-02-05 at 14.15.10_report.csv  color_classifier.py  config.py  main.py  mic_calculator.py  plate_detector.py  test_blob_detection.py  test_dart_params.py  test_full_dart_pipeline.py  visualizer.py  well_extractor.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/constants/: app_colors.dart  app_strings.dart  drug_concentrations.dart  eucast_breakpoints.dart
lib/core/theme/: app_theme.dart
lib/data/local/: database_helper.dart
lib/data/models/: models.dart  (+5 more)
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_tr.dart  app_tr.arb
lib/providers/: history_provider.dart  locale_provider.dart  user_provider.dart
lib/services/: export_service.dart  grid_fitter.dart  image_processing_service.dart  interpretation_service.dart  native_opencv.dart  plate_detector.dart  well_extractor.dart
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
test/models/: mic_result_test.dart  well_result_test.dart
test/providers/: locale_provider_test.dart  user_provider_test.dart
test/services/: classification_test.dart
test_images/: reference_classification.md
web/: index.html  manifest.json
work_on_this/: AFST_BP_v12.0_non-protected_final_26_Jun_2025.xlsx
(+15 files in other folders)
